# ratslamPython

./: .pydevproject  CMakeLists.txt  package.xml
launch/: irataus.launch
msg/: poses_robot.msg  scalarMess.msg  toute.msg
src/: em_trace.txt  main_em.py  main_lv.py  object_learning.py  poses_pc_robot.txt  pylistener.py  pytalker.py  roslib
src/ratslam/: experience_map_younes.py  itertools  local_view_match.py  math  numpy  posecell_networkv.py
